test/corpus/declarations.txt
===================
interface
===================

interface Main {}

---

(module (interface_declaration (identifier) (block)))

===================
interface with function
===================

interface Printable {
    public function toString():String;
}

---

(module
  (interface_declaration
    (identifier)
    (block
      (function_declaration
        (identifier)
        (type (identifier))
      )
    )
  )
)

===================
interface with type params
===================

interface Main<T,U> {}

---

(module
  (interface_declaration
    (identifier)
    (type_params
      (type (identifier))
      (type (identifier))
    )
    (block)
  )
)

===================
interface with nested type params
===================

interface Main<T, Other<U, V>> {}

---

(module
  (interface_declaration
    (identifier)
    (type_params
      (type (identifier))
      (type
        (identifier)
        (type_params
          (type (identifier))
          (type (identifier))
        )
      )
    )
    (block)
  )
)


===================
interface extending another
===================

interface ITest extends IBanana {}

---

(module (interface_declaration
  (identifier)
  (type_name)
  (block)
))


===================
interface extending another from a package
===================

interface ITest extends fruitbowl.IBanana {}

---

(module (interface_declaration
  (identifier)
  (package_name)
  (type_name)
  (block)
))


===================
interface with modifiers
===================

private extern final interface ITest {}

---

(module (interface_declaration (identifier) (block)))


===================
class implementing interface
===================

class Main implements ITest {}

---

(module (class_declaration (identifier) (type_name) (block)))

===================
class implementing multiple interfaces
===================

class Main implements ITest implements IAnother {}

---

(module (class_declaration
  (identifier)
  (type_name)
  (type_name)
  (block)
))

===================
class extending parent class in package
===================

class Main extends pack.Test {}

---

(module (class_declaration
  (identifier)
  (package_name)
  (type_name)
  (block)
))


===================
final class
===================

final class Main {}

---

(module (class_declaration (identifier) (block)))



===================
class with modifiers
===================

private extern final class Main {}

---

(module (class_declaration (identifier) (block)))


===================
class
===================

class Main {}

---

(module (class_declaration (identifier) (block)))

===================
class with type params
===================

class Main<T,U> {}

---

(module
  (class_declaration
    (identifier)
    (type_params
      (type (identifier))
      (type (identifier))
    )
    (block)
  )
)


===================
class constructor
===================

class Main {
  function new(){}
}

---

(module
  (class_declaration (identifier)
    (block
      (function_declaration (block))
    )
  )
)


===================
class function
===================

class Main {
  function foo(){}
}

---

(module
  (class_declaration (identifier)
    (block
      (function_declaration (identifier) (block))
    )
  )
)

===================
class function with type params
===================

class Main {
  function foo<T,U>(){}
}

---

(module
  (class_declaration (identifier)
    (block
      (function_declaration
        (identifier)
        (type_params
          (type (identifier))
          (type (identifier))
        )
        (block))
    )
  )
)


===================
class function with arg
===================

class Main {
  function foo(x){}
}

---

(module
  (class_declaration (identifier)
    (block
      (function_declaration (identifier)
        (function_arg (identifier))
        (block)
      )
    )
  )
)

===================
class function with arg, types and default param.
===================

class Main {
  function foo(x:Int = 3, y:String){}
}

---

(module
  (class_declaration (identifier)
    (block
      (function_declaration (identifier)
        (function_arg (identifier) (type (identifier)) (integer))
        (function_arg (identifier) (type (identifier)))
        (block)
      )
    )
  )
)

===================
class with property and read/write access
===================

class Main {
  public var x(default, null):Int;
}

---

(module
  (class_declaration (identifier)
    (block
      (variable_declaration (identifier)
        (access_identifiers )
        (type (identifier))
      )
    )
  )
)

===================
function with generic typed arg
===================

function foo(x:Array<Int>){}

---

(module
  (function_declaration
    (identifier)
    (function_arg
      (identifier)
      (type
        (identifier)
        (type_params (type (identifier)))
      )
    )
    (block)
  )
)

===================
function with anonymous struct arg
===================

function foo(x:{z:int, y:float}){}

---

(module
  (function_declaration
    (identifier)
    (function_arg
      (identifier)
      (type
        (pair (identifier) (type (identifier)))
        (pair (identifier) (type (identifier)))
      )
    )
    (block)
  )
)


===================
class with runtime metadata
===================

@test
class Main {
}

---

(module
  (class_declaration
    (metadata (identifier))
    (identifier)
    (block)
  )
)

===================
class with compile time metadata
===================

@:test
class Main {
}

---

(module
  (class_declaration
    (metadata (identifier))
    (identifier)
    (block)
  )
)


===================
class function with runtime metadata
===================

class Main {
  @test
  function foo(){}
}

---

(module
  (class_declaration (identifier)
    (block
      (function_declaration
        (metadata (identifier))
        (identifier)
        (block)
      )
    )
  )
)

===================
class function with compile time metadata
===================

class Main {
  @:test
  function foo(){}
}

---

(module
  (class_declaration (identifier)
    (block
      (function_declaration
        (metadata (identifier))
        (identifier)
        (block)
      )
    )
  )
)

===================
class variable with runtime metadata
===================

class Main {
  @test
  var foo:Int;
}

---

(module
  (class_declaration (identifier)
    (block
      (variable_declaration
        (metadata (identifier))
        (identifier)
        (type (identifier))
      )
    )
  )
)

===================
class variable with compile time metadata
===================

class Main {
  @:test
  var foo:Int;
}

---

(module
  (class_declaration (identifier)
    (block
      (variable_declaration
        (metadata (identifier))
        (identifier)
        (type (identifier))
      )
    )
  )
)

===================
class public static inline function
===================

class Main {
  public static inline function foo(){}
}

---
(module
  (class_declaration (identifier)
    (block
      (function_declaration
      (identifier) (block))
    )
  )
)

===================
class function with declaration assignment statement
===================

class Main {
  function foo(){
    var x = 4;
    var y = 'test';
  }
}

---

(module
  (class_declaration (identifier)
    (block
      (function_declaration (identifier)
        (block
          (variable_declaration (identifier) (operator) (integer))
          (variable_declaration (identifier) (operator) (string))
        )
      )
    )
  )
)

===================
class function with seperate declaration and assignment statements
===================

class Main {
  function foo(){
    var x;
    var y;

    x = 4;
    y = x;
  }
}

---

(module
  (class_declaration (identifier)
    (block
      (function_declaration (identifier)
        (block
          (variable_declaration (identifier))
          (variable_declaration (identifier))
          (identifier) (operator) (integer)
          (identifier) (operator) (identifier)
        )
      )
    )
  )
)

===================
class function with this
===================

class Main {
  public var x;
  function foo(){
    this.x = 4;
  }
}

---

(module
  (class_declaration (identifier)
    (block
      (variable_declaration
        (identifier)
      )
      (function_declaration (identifier)
        (block
          (member_expression (identifier))
          (operator)
          (integer)
        )
      )
    )
  )
)



===================
class variables
===================

class Main {
  public var x;
}

---

(module
  (class_declaration (identifier)
    (block
      (variable_declaration
        (identifier)
      )
    )
  )
)

===================
class variables with basic type
===================

class Main {
  public var x:Int;
}

---

(module
  (class_declaration (identifier)
    (block
      (variable_declaration
        (identifier)
        (type (identifier))
      )
    )
  )
)

===================
class variables with parameterized type
===================

class Main {
  public var x:Array<Int>;
}

---

(module
  (class_declaration (identifier)
    (block
      (variable_declaration
        (identifier)
        (type
          (identifier)
          (type_params (type (identifier)))
        )
      )
    )
  )
)


===================
class final variables with basic type
===================

class Main {
  public final x:Int;
}

---

(module
  (class_declaration (identifier)
    (block
      (variable_declaration
        (identifier)
        (type (identifier))
      )
    )
  )
)

===================
type def
===================

typedef MyType = {
  var x:Int;
}

---

(module
  (typedef_declaration (identifier)
    (block
      (variable_declaration
        (identifier)
        (type (identifier))
      )
    )
  )
)

===================
type def 'alias'
===================

typedef MyType = Int;

---

(module
  (typedef_declaration
    (identifier)
    (type (identifier))
  )
)

===================
type def 'alias'
===================

typedef MyType = Array<Int>;

---

(module
  (typedef_declaration
    (identifier)
    (type
      (identifier)
      (type_params (type (identifier)))
    )
  )
)


===================
type def with modifiers
===================

private extern typedef MyType = {}

---

(module (typedef_declaration (identifier) (block)))


===================
var declaration with type
===================

var x:Int;

---

(module
  (variable_declaration
    (identifier)
    (type (identifier))
  )
)

===================
var declaration with type and access_identifiers
===================

var x(get, set):Int;

---

(module
  (variable_declaration
    (identifier)
    (access_identifiers )
    (type (identifier))
  )
)


===================
var declaration with type and parenthesis
===================

var x:(((Int)));

---

(module
  (variable_declaration
    (identifier)
    (type (identifier))
  )
)

===================
var declaration with type with params
===================

var x:Array<Int>;

---

(module
  (variable_declaration
    (identifier)
    (type
      (identifier)
      (type_params (type (identifier)))
    )
  )
)

===================
var declaration array comprehension (for)
===================

var a = [for (i in 0...5) i];

---

(module
  (variable_declaration
    (identifier)
    (operator)
    (array
      (for_statement
        (identifier)
        (range_expression (integer) (integer))
      )
      (identifier)
    )
  )
)

===================
var declaration array comprehension (while)
===================

var a = [while (i < 1) i];
---

(module
  (variable_declaration
    (identifier)
    (operator)
    (array
      (for_statement
        (identifier)
        (range_expression (integer) (integer))
      )
      (identifier)
    )
  )
)

===================
var declaration with function type with no inputs
===================

var x:() -> Int;

---

(module
  (variable_declaration
    (identifier)
    (type
      (function_type
        (type (identifier))
      )
    )
  )
)

===================
var declaration with function type
===================

var x:Int -> Int;

---

(module
  (variable_declaration
    (identifier)
    (type
      (function_type
        (type (identifier))
        (type (identifier))
      )
    )
  )
)

===================
var declaration with function type with named input
===================

var x:(arg:Int) -> Int;

---

(module
  (variable_declaration
    (identifier)
    (type
      (function_type
        (identifier)
        (type (identifier))
        (type (identifier))
      )
    )
  )
)

===================
var declaration with function type with named input nested function
===================

var x:(arg:()->Int) -> Int;

---

(module
  (variable_declaration
    name: (identifier)
    type: (type
      (function_type
        (identifier)
        (type (function_type
          (type built_in: (identifier))
        ))
        (type built_in: (identifier))
      )
    )
  )
)

===================
var declaration with function type with named input multiple nested function
===================

var e:(fn:Int->Bool, Float, sub:(Bool, Bool) -> Int) -> Bool;

---

(module
  (variable_declaration
    (identifier)
    (type (function_type
        (identifier)
        (type (function_type
          (type (identifier))
          (type
          (identifier))
        ))
      (type (identifier))
      (identifier)
      (type (function_type
        (type (identifier))
        (type (identifier))
        (type (identifier))
      ))
      (type (identifier))
    ))
  )
)

===================
var declaration with function type with named input multiple nested function with lots of params
===================

var e:((fn:(Int->Bool), Float, sub:((Bool, Bool) -> Int))->Bool);

---

(module
  (variable_declaration
    (identifier)
    (type (function_type
        (identifier)
        (type (function_type
          (type (identifier))
          (type
          (identifier))
        ))
      (type (identifier))
      (identifier)
      (type (function_type
        (type (identifier))
        (type (identifier))
        (type (identifier))
      ))
      (type (identifier))
    ))
  )
)

===================
var declaration with function type with wrapped parens
===================

var x:((arg:Int) -> Int);

---

(module
  (variable_declaration
    (identifier)
    (type
      (function_type
        (identifier)
        (type (identifier))
        (type (identifier))
      )
    )
  )
)



===================
var declaration with function type
===================

var x:(Int,Int) -> Int;

---

(module
  (variable_declaration
    (identifier)
    (type
      (function_type
        (type (identifier))
        (type (identifier))
        (type (identifier))
      )
    )
  )
)

===================
var declaration with type parameter
===================

var x:T<S>;

---

(module
  (variable_declaration
    (identifier)
    (type
      (identifier)
      (type_params
        (type (identifier))
      )
    )
  )
)

===================
var declaration with function type parameter
===================

var x:T<S -> R>;

---

(module
  (variable_declaration
    (identifier)
    (type
      (identifier)
      (type_params
        (type
          (function_type
            (type (identifier))
            (type (identifier))
          )
        )
      )
    )
  )
)
